@@ -37,20 +37,25 @@ repositories {
     gradlePluginPortal()
 }
 
+val kotestVersion = "5.8.0"
+
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-security")
-//    implementation("org.springframework.security:spring-security-oauth2-resource-server")
+    implementation("org.springframework.security:spring-security-oauth2-resource-server")
     implementation("org.springframework.security:spring-security-oauth2-jose")
+    implementation("org.springframework.security:spring-security-crypto")
+    implementation("org.bouncycastle:bcpkix-jdk18on:1.77")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("org.jetbrains.kotlin:kotlin-stdlib")
-    implementation("com.h2database:h2")
     implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0")
     implementation("com.corundumstudio.socketio:netty-socketio:2.0.3")
     implementation("net.pwall.json:json-kotlin-schema:0.42")
     implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0")
+    implementation("io.hypersistence:hypersistence-utils-hibernate-62:3.6.1")
+    implementation("io.github.oshai:kotlin-logging-jvm:5.1.0")
 //    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0")
 //    implementation("com.google.code.gson:gson:2.10.1")
     implementation("com.networknt:json-schema-validator:1.0.87")
@@ -59,19 +64,30 @@ dependencies {
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
     implementation("jakarta.validation:jakarta.validation-api:3.0.2")
     implementation("org.liquibase:liquibase-core")
+    implementation("com.jayway.jsonpath:json-path:2.8.0")
     developmentOnly("org.springframework.boot:spring-boot-devtools")
     runtimeOnly("org.postgresql:postgresql")
     annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.springframework.boot:spring-boot-starter-actuator")
-//    testImplementation("org.springframework.security:spring-security-test")
+    testImplementation("org.springframework.security:spring-security-test")
     testImplementation("io.mockk:mockk:1.13.8")
     testImplementation("org.junit.jupiter:junit-jupiter:5.8.1")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     testImplementation("org.testcontainers:testcontainers:1.19.2")
     testImplementation("org.testcontainers:junit-jupiter:1.19.2")
     testImplementation("org.testcontainers:postgresql")
     testImplementation("org.springframework.boot:spring-boot-testcontainers")
     testImplementation("org.springframework.boot:spring-boot-devtools")
+    testImplementation("com.ninja-squad:springmockk:4.0.2")
+    implementation("io.jsonwebtoken:jjwt-api:0.12.3")
+    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.3")
+    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.3")
+//    testImplementation("io.kotest:kotest-property:$kotestVersion")
+//    testImplementation("io.kotest:kotest-runner-junit5:$kotestVersion")
+//    testImplementation("io.kotest:kotest-runner-junit5-jvm:$kotestVersion")
+//    testImplementation("io.kotest:kotest-assertions-core:$kotestVersion")
+//    testImplementation("io.kotest.extensions:kotest-extensions-spring:1.1.3")
 }
 
 tasks.withType<KotlinCompile> {
@@ -79,10 +95,6 @@ tasks.withType<KotlinCompile> {
         freeCompilerArgs += "-Xjsr305=strict"
         jvmTarget = "17"
     }
-}
-
-tasks.withType<Test> {
-    useJUnitPlatform()
 }
 
 hibernate {
@@ -106,7 +118,7 @@ jib {
 tasks {
     generateTypeScript {
         jsonLibrary = JsonLibrary.jackson2
-        classPatterns = listOf("com.arsahub.backend.dtos.*")
+        classPatterns = listOf("com.arsahub.backend.dtos.*.*")
         outputKind = TypeScriptOutputKind.module
         outputFileType = TypeScriptFileType.implementationFile
         outputFile = "generated-types.ts"
@@ -121,4 +133,13 @@ tasks.register("generateTypesForFrontend") {
             into("../frontend/types")
         }
     }
+}
+
+tasks.test {
+    useJUnitPlatform()
+
+    jvmArgs(
+        "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens", "java.base/java.time=ALL-UNNAMED",
+    )
 }
